# scah

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  tests.yml
benches/: Cargo.toml  README.md  memory_bench.rs  speed_bench.rs
benches/.cargo/: config.toml
benches/macro/: memory_bench.rs  speed_bench.rs
benches/nested/: memory_bench.rs  speed_bench.rs
benches/simple/all/: memory_bench.rs  speed_bench.rs
benches/simple/first/: memory_bench.rs  speed_bench.rs
benches/spec/: speed_bench.rs
benches/support/: mod.rs
crates/bindings/scah-node/: .gitattributes  .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
crates/bindings/scah-node/__test__/: index.spec.ts
crates/bindings/scah-node/benchmark/: bench.ts
crates/bindings/scah-node/src/: elements.rs  query.rs
crates/bindings/scah-python/: Cargo.toml  README.md  pyproject.toml  scah.pyi
crates/bindings/scah-python/benches/: conftest.py  test_spec.py  test_structural.py  test_synthetic.py  test_synthetic_first.py
crates/bindings/scah-python/benches/utils/: criterion_figure.py  figure.py  parsers.py
crates/bindings/scah-python/src/: element.rs  lib.rs  query.rs  save.rs
crates/bindings/scah-python/tests/: test_core.py
crates/scah/: Cargo.toml
crates/scah-macros/: Cargo.toml
crates/scah-macros/src/: lib.rs
crates/scah-query-ir/: Cargo.toml
crates/scah-query-ir/src/: lib.rs
crates/scah-query-ir/src/query/: mod.rs
crates/scah-query-ir/src/query/compiler/: builder.rs  lazy.rs  mod.rs  query.rs  transition.rs
crates/scah-query-ir/src/query/selector/: builder.rs  eq.rs  lexer.rs  mod.rs  string_search.rs
crates/scah-reader/: Cargo.toml
crates/scah-reader/src/: lib.rs
crates/scah/src/: lib.rs  otel.rs
crates/scah/src/debug/: mod.rs
crates/scah/src/engine/: cursor.rs  executor.rs  mod.rs  multiplexer.rs
crates/scah/src/html/: mod.rs  open_elements.rs  parser.rs
crates/scah/src/html/element/: builder.rs  mod.rs  tokenizer.rs
crates/scah/src/query/compiler/: mod.rs  query.rs
crates/scah/src/query/selector/: builder.rs  eq.rs
crates/scah/src/store/: element.rs  mod.rs  text_content.rs
crates/scah/src/store/arena/: id.rs  iter.rs
crates/scah/src/support/: macros.rs
crates/scah/tests/: debugging_test.rs  html_soup_test.rs  integration_test.rs  real_html_test.rs
crates/scah/tests/html_soup/: edge_cases_test.rs  eof_recovery_test.rs  helpers.rs  implied_close_test.rs  misnesting_test.rs  mod.rs  selector_stability_test.rs  void_rawtext_test.rs
examples/python/: api_design.py
examples/rust/: api_design.rs
nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
nodejs/.github/workflows/: CI.yml
nodejs/__test__/: index.spec.ts
nodejs/benchmark/: bench.ts
nodejs/src/: element.rs  elements.rs  lib.rs  query.rs  store.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/benches/: conftest.py  test_spec.py  test_synthetic.py
python/benches/utils/: criterion_figure.py  figure.py  parsers.py
python/src/: element.rs  lib.rs  query.rs  save.rs  selection.rs  store.rs  view.rs
python/tests/: test_core.py  test_mem.py
src/: lib.rs  main.rs
src/css/: element.rs  fsm.rs  fsm_manager.rs  fsm_session.rs  mod.rs  parser.rs  pattern.rs  query.rs  selection.rs  selection_map.rs  selectors.rs  state.rs  tokernizer.rs  tree.rs
src/css/element/: builder.rs  element.rs  element_eq.rs  eq.rs  lexer.rs  mod.rs  string_search.rs
src/css/parser/: fsm.rs  fsm_builder.rs  lexer.rs  mod.rs  pattern.rs  pattern_section.rs  query_tokenizer.rs  tree_fsm.rs
src/css/parser/element/: element.rs  element_eq.rs  mod.rs  string_search.rs
src/css/parser/tree/: builder.rs  lazy.rs  mod.rs  query.rs  selection.rs  state.rs  tree.rs
src/css/query/: element.rs  element2.rs  manager.rs  mod.rs  selection.rs  task.rs  tree.rs
src/css/selector/: builder.rs  error.rs  lazy.rs  mod.rs  query.rs  state.rs  transition.rs
src/engine/: cursor.rs  executor.rs  multiplexer.rs
src/html/: parser.rs
src/html/element/: builder.rs  tokenizer.rs
src/indexer/: mod.rs  swar.rs  x86_64.rs
src/parser/: attribute.rs  parser.rs
src/parser/attribute/: parser.rs  tokenizer.rs
src/query/compiler/: lazy.rs  transition.rs
src/query/selector/: lexer.rs  mod.rs
src/runner/: element.rs  mod.rs  runner.rs
src/sax/: parser.rs
src/sax/element/: builder.rs  element.rs  tokenizer.rs
src/scanner/: mod.rs  scanner.rs  swar.rs  x86_64.rs
src/scanner/simd/: mod.rs  swar.rs  x86_64.rs
src/selection_engine/: cursor.rs  executor.rs  manager.rs  mod.rs  multiplexer.rs  selection.rs  task.rs
src/store/: attributes.rs  element.rs  fake.rs  header.rs  iterator.rs  mod.rs  python.rs  query.rs  reserve.rs  rust.rs  span.rs  text_content.rs  traits.rs
src/store/arena/: id.rs  mod.rs  span.rs
src/support/: macros.rs  token.rs
src/utils/: macros.rs  mod.rs  pair.rs  reader.rs  ref_unsafe.rs  selection_map.rs  token.rs  tree.rs
src/xhtml/: mod.rs  parser.rs  text_content.rs
src/xhtml/attribute/: parser.rs  tokenizer.rs
src/xhtml/element/: element.rs  element_fsm.rs  mod.rs  pair.rs  parser.rs  tokenizer.rs
tests/: integration_test.rs  real_html_test.rs  test_case.rs  whatwg_html_spec_test.rs
tests/python/: test_core.py
