[workspace]
members = [
    "crates/scah",
    "crates/bindings/scah-python",
    "crates/bindings/scah-node",
    "benches",
]
default-members = ["crates/scah"]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "none"
overflow-checks = false
incremental = false
debug = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = 1
