[workspace]
members = [
    "crates/scah-reader",
    "crates/scah-query-ir",
    "crates/scah-macros",
    "crates/scah",
    "crates/bindings/scah-python",
    "crates/bindings/scah-node",
    "benches",
]
default-members = ["crates/scah"]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
overflow-checks = false
incremental = false
debug = 0
debug-assertions = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = 0

[profile.bench]
inherits = "release"
