[package]
name = "scah-benches"
version = "0.0.16"
edition = "2024"
publish = false

[dependencies]
scah = { path = "../crates/scah" }

# Benchmarking Tools
gungraun = "0.17"
criterion = { version = "0.8.1", features = ["html_reports"] }

# Competitor libraries
lexbor_css = { git = "https://github.com/zacharyvmm/lexbor-rust-css-selection.git" }
scraper = "0.25.0"
tl = "0.7.8"
# tl = { version = "0.7.8", features = ["simd"] }
lol_html = "2.7.1"

[[bench]]
name = "memory_bench_simple_all"
path = "simple/all/memory_bench.rs"
harness = false

[[bench]]
name = "memory_bench_simple_first"
path = "simple/first/memory_bench.rs"
harness = false

[[bench]]
name = "speed_bench_simple_all"
path = "simple/all/speed_bench.rs"
harness = false

[[bench]]
name = "speed_bench_simple_first"
path = "simple/first/speed_bench.rs"
harness = false

[[bench]]
name = "speed_bench_macro_queries"
path = "macro/speed_bench.rs"
harness = false

[[bench]]
name = "memory_bench_macro_queries"
path = "macro/memory_bench.rs"
harness = false

[[bench]]
name = "speed_bench_nested_queries"
path = "nested/speed_bench.rs"
harness = false

[[bench]]
name = "memory_bench_nested_queries"
path = "nested/memory_bench.rs"
harness = false
