
[package]
authors = ["Zachary McSween Manickchand <contact@zacharymm.com>"]
edition = "2024"
name    = "scah-nodejs"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
scah        = { path = ".." }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
