[package]
name = "scah-macros"
version = "0.0.16"
edition = "2024"
license = "MIT"
description = "Procedural macros for the scah selector and streaming parser crates."
repository = "https://github.com/zacharyvmm/scah"
homepage = "https://github.com/zacharyvmm/scah"
documentation = "https://docs.rs/scah-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
scah-query-ir = { version = "0.0.16", path = "../scah-query-ir" }
