[package]
name = "scah-query-ir"
version = "0.0.13"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
smallvec = "1.15.1"
scah-reader = { path = "../scah-reader" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
let-and-return = "allow"
byte_char_slices = "allow"
redundant-field-names = "allow"
len_without_is_empty = "allow"
