[package]
name = "scah-query-ir"
version = "0.0.16"
edition = "2024"
license = "MIT"
description = "Internal query IR used by the scah selector and macro crates."
repository = "https://github.com/zacharyvmm/scah"
homepage = "https://github.com/zacharyvmm/scah"
documentation = "https://docs.rs/scah-query-ir"

[dependencies]
smallvec = "1.15.1"
scah-reader = { version = "0.0.16", path = "../scah-reader" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
let-and-return = "allow"
byte_char_slices = "allow"
redundant-field-names = "allow"
len_without_is_empty = "allow"
