[package]
name = "scah-reader"
version = "0.0.17"
edition = "2024"
license = "MIT"
description = "Streaming XML and HTML reader primitives used by scah."
repository = "https://github.com/zacharyvmm/scah"
homepage = "https://github.com/zacharyvmm/scah"
documentation = "https://docs.rs/scah-reader"

[lints.clippy]
let-and-return = "allow"
byte_char_slices = "allow"
redundant-field-names = "allow"
len_without_is_empty = "allow"
