[package]
name = "scah"
version = "0.0.17"
edition = "2024"
license = "MIT"
description = "CSS selectors meet streaming XML/HTML parsing. Filter StAX events and build targeted DOMs without loading the entire document."
repository = "https://github.com/zacharyvmm/scah"
homepage = "https://github.com/zacharyvmm/scah"
documentation = "https://docs.rs/scah"
readme = "../../README.md"
keywords = ["css", "selector", "parser", "html", "sax"]
categories = ["parser-implementations", "web-programming"]

[lib]
name = "scah"
path = "src/lib.rs"

[dependencies]
smallvec = "1.15.1"
scah-reader = { version = "0.0.17", path = "../scah-reader" }
scah-query-ir = { version = "0.0.17", path = "../scah-query-ir" }
scah-macros = { version = "0.0.17", path = "../scah-macros" }
tracing = { version = "0.1", optional = true }

[features]
default = []
otel = ["dep:tracing"]

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
let-and-return = "allow"
byte_char_slices = "allow"
redundant-field-names = "allow"
len_without_is_empty = "allow"
