[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["extension-module"]

[project]
name = "scah"
version = "0.0.17"
description = "scah (scan HTML)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
bench = [
    "scah",
    "beautifulsoup4",
    "lxml",
    "selectolax",
    "parsel",
    "gazpacho",
    "pytest",
    "pytest-benchmark[histogram]",
    "seaborn",
    "poethepoet",
]

# uv run --all-extras poe bench
[tool.poe.tasks]
stub = { cmd = "cargo run --bin stub_gen" }
bench = [
    { ref = "stub" },
#    { cmd = "uvx maturin build --release" },
    { cmd = "uv pip install -e . --reinstall --no-cache"},
    { cmd = "pytest benches/test_synthetic.py --benchmark-columns=min,mean,max --benchmark-sort=mean --benchmark-warmup-iterations 5 --benchmark-json benches/synthetic.json" },
    { cmd = "pytest benches/test_synthetic_first.py --benchmark-columns=min,mean,max --benchmark-sort=mean --benchmark-warmup-iterations 5 --benchmark-json benches/synthetic_first.json" },
    { cmd = "pytest benches/test_spec.py --benchmark-columns=min,mean,max --benchmark-sort=mean --benchmark-warmup-iterations 5 --benchmark-json benches/whatwg.json" },
    { cmd = "pytest benches/test_structural.py --benchmark-columns=min,mean,max --benchmark-sort=mean --benchmark-warmup-iterations 5 --benchmark-json benches/nested.json" },
    { cmd = "python3 ./benches/utils/figure.py ./benches/synthetic.json -o ./benches/images/synthetic.png" },
    { cmd = "python3 ./benches/utils/figure.py ./benches/synthetic_first.json -o ./benches/images/synthetic_first.png" },
    { cmd = "python3 ./benches/utils/figure.py ./benches/whatwg.json -o ./benches/images/whatwg.png" },
    { cmd = "python3 ./benches/utils/figure.py ./benches/nested.json -o ./benches/images/nested.png" },
    { cmd = "rm ./benches/*.json" },
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
scah = { workspace = true }
